# CppBuildTasks-Validation

.github/workflows/: hosted-cargo-vcpkg-install.yml  hosted-contexts-dump.yml  hosted-dump-logs.yml  hosted-get-cmake-local-cache-test.yml  hosted-matchers.yml  hosted-msbuild-vcpkg_submod.yml  hosted-ninja-toolchain-vcpkg_submod.yml  hosted-ninja-vcpkg-install.yml  hosted-ninja-vcpkg.yml  hosted-ninja-vcpkg_submod-triplet.yml  hosted-ninja-vcpkg_submod.yml  hosted-pure-workflow.yml
cargo/: .gitignore  Cargo.toml  vcpkg.json
