[package]
name = "cargo-sample"
version = "0.0.1"
edition = "2018"
license = "MIT"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "c30de8e"

[package.metadata.vcpkg.target]
x86_64-unknown-linux-gnu = { dependencies = ["libvpx", "libyuv"] }
x86_64-pc-windows-msvc = { dependencies = [
    "libvpx:x64-windows-static",
    "libyuv:x64-windows-static",
] }